Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <div id="music-modal">
   <div class="modal-content">
     <h2>開啟背景音樂嗎？</h2>
-    <p>我們準備了一段溫暖的婚禮背景音樂，讓瀏覽更有氛圍。</p>
+    <p>讓瀏覽更有氛圍吧:)。</p>
     <div class="modal-buttons">
       <button id="music-yes">開啟音樂</button>
       <button id="music-no">暫不播放</button>
@@ -344,3 +344,4 @@
 
 </body>
 </html>
+
