--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dearus｜婚禮電子喜帖</title>
-<!-- Google 字型 -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@500;700&family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
@@ -65,7 +64,13 @@
     text-align:center; transition: transform 0.3s, box-shadow 0.3s;
   }
   .card:hover { transform: translateY(-6px); box-shadow:0 20px 36px rgba(0,0,0,0.15); }
-  .card img { width:100%; height:350px; object-fit:contain; background:#fdfcf9; }
+  .card img {
+  width:100%;
+  height:auto;   /* 改成自動高度 */
+  object-fit: contain; /* 整張圖片顯示，會有上下空白 */
+  background:#fdfcf9;
+}
+
   .card h3 { margin:16px 0 8px; font-family:'Playfair Display', serif; font-size:22px; color:#5a4a3c; }
   .card p { margin-bottom:16px; color:#7a6b5c; font-weight:600; font-size:18px; }
 
@@ -80,7 +85,6 @@
   }
   .order-btn a:hover { background: linear-gradient(135deg,#bfa68a,#d7c6b6); }
 
-  /* 區塊內文字居中 */
   section p { max-width:600px; text-align:center; line-height:1.8; }
 
   /* 聯絡我們 */
@@ -93,7 +97,7 @@
   .process-steps a { color:#bfa68a; text-decoration:underline; }
   .process-steps a:hover { color:#d7c6b6; }
 
-  /* ===== 燈箱樣式 ===== */
+  /* ===== 音樂燈箱 ===== */
   #music-modal {
     position: fixed; top:0; left:0;
     width:100%; height:100%;
@@ -131,15 +135,22 @@
     background:#e0e0e0;
   }
 
+  /* 手機適配 */
+  @media screen and (max-width:600px){
+    #hero h1 { font-size:48px; }
+    #hero p { font-size:18px; }
+    .card img { height:200px; }
+  }
+
 </style>
 </head>
 <body>
 
-<!-- ===== 背景音樂燈箱 ===== -->
+<!-- ===== 音樂燈箱 ===== -->
 <div id="music-modal">
   <div class="modal-content">
     <h2>開啟背景音樂嗎？</h2>
-    <p>讓瀏覽更有氛圍吧:)。</p>
+    <p>我們準備了一段溫暖的婚禮背景音樂，讓瀏覽更有氛圍。</p>
     <div class="modal-buttons">
       <button id="music-yes">開啟音樂</button>
       <button id="music-no">暫不播放</button>
@@ -157,6 +168,7 @@
     <p>一份不急著說完的邀請，讓照片與文字，慢慢把「我們」說清楚。本商店專賣網站式電子喜帖及婚禮影片，歡迎參考選購❤</p>
   </div>
 </section>
+
 
 </section><!-- 網站式電子喜帖 -->
 <section id="section1">
@@ -268,7 +280,7 @@
 
 </body>
 </html>
-<!-- 聯絡我們 -->
+<!-- ===== 聯絡我們 ===== -->
 <section id="contact">
   <div class="cards-container">
     <h2>聯絡我們</h2>
@@ -281,27 +293,27 @@
   </div>
 </section>
 
-<!-- 製作及付款流程 -->
+<!-- ===== 製作流程 ===== -->
 <section id="process">
   <div class="cards-container">
     <h2>製作與付款流程</h2>
     <ol class="process-steps">
-      <li><strong> 填寫訂單表單：</strong>新人前往 <a href="https://docs.google.com/forms/d/1ORQJnRp7BlY29c-JV1RVuPl5Mo7OmTnNv29RxwV5q8I/preview" target="_blank">Dearus 婚禮電子喜帖下單表單</a> 填寫。 </li>
-      <li><strong> 完成初版：</strong>Dearus 於「收到完整資料後 2 個工作天內」完成電子喜帖/影片初版，並提供預覽網址供您校稿。</li>
-      <li><strong> 校稿修改：</strong>校稿修改共 2 次（限文字內容及照片順序調整，字型／照片大小／文字及照片排版／文字顏色恕不接受調整）。</li>
-      <li><strong> 提供匯款帳號：</strong>完稿確認無誤後，Dearus 會提供匯款帳號。</li>
-      <li><strong> 交付最終版本：</strong>完成匯款後，交付最終「無廣告版本」電子喜帖/影片。</li>
+      <li><strong>填寫訂單表單：</strong>新人前往 <a href="#" target="_blank">下單表單</a> 填寫。</li>
+      <li><strong>完成初版：</strong>收到完整資料後 2 個工作天內完成初版並提供預覽。</li>
+      <li><strong>校稿修改：</strong>可修改文字及照片順序，共 2 次。</li>
+      <li><strong>提供匯款帳號：</strong>確認無誤後提供匯款帳號。</li>
+      <li><strong>交付最終版本：</strong>完成匯款後交付最終「無廣告版本」。</li>
     </ol>
   </div>
 </section>
 
 <!-- ===== 下單按鈕 ===== -->
 <div class="order-btn">
-  <a href="https://docs.google.com/forms/d/1ORQJnRp7BlY29c-JV1RVuPl5Mo7OmTnNv29RxwV5q8I/preview" target="_blank">前往 Dearus 婚禮電子喜帖下單表單</a>
+  <a href="#" target="_blank">前往下單表單</a>
 </div>
 
 <script>
-  // ===== 淡入效果 =====
+  // 淡入效果
   const sections = document.querySelectorAll('section');
   const orderBtn = document.querySelector('.order-btn');
 
@@ -325,7 +337,7 @@
 
   orderObserver.observe(orderBtn);
 
-  // ===== 音樂燈箱 =====
+  // 音樂燈箱
   const musicModal = document.getElementById('music-modal');
   const musicYes = document.getElementById('music-yes');
   const musicNo = document.getElementById('music-no');
@@ -344,4 +356,3 @@
 
 </body>
 </html>
-
