Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <div id="music-modal">
   <div class="modal-content">
     <h2>開啟背景音樂嗎？</h2>
-    <p>我讓瀏覽更有氛圍吧:)</p>
+    <p>讓瀏覽更有氛圍吧:)</p>
     <div class="modal-buttons">
       <button id="music-yes">開啟音樂</button>
       <button id="music-no">暫不播放</button>
@@ -356,4 +356,5 @@
 
 </body>
 </html>
+
 
